# home-service-robot

./: .gitignore  LICENSE  README.md  add_marker.sh  home_service.sh  test_navigation.sh  test_slam.sh  update.sh
add_markers/: CMakeLists.txt  package.xml
add_markers/launch/: home_service.launch  home_service_navigation.launch  world.launch  world_navigation.launch
add_markers/rviz/: home_service.rviz
add_markers/src/: add_markers.cpp  show_markers.cpp
add_markers/worlds/: Apartment.world
pick_objects/: CMakeLists.txt  package.xml
pick_objects/src/: pick_objects.cpp
scripts/: add_marker.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
